fix: remove spacing in main h1 heading

--- a/assets/sass/components/headings.scss
+++ b/assets/sass/components/headings.scss
@@ -7,6 +7,10 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    
+    br {
+        display: none;
+    }
 
     @include m.mq(large) {
         font-size: 50px;
